# rusty-fs

./: Cargo.toml  README.md  docker-compose.perf.yml  package-lock.json  specs.md
.github/skills/rust/: Rust-Patterns.md  Rust-Project-Setup.md  SKILL.md
.github/workflows/: ci.yml  e2e-perf.yml
deploy/: install.sh  uninstall.sh
deploy/launchd/: com.rusty-fs.filer.plist  com.rusty-fs.mounty.plist
deploy/systemd/: filer.service  mounty.service
docs/: graceful_startup_shutdown_implementation_notes.md  historical_decisions.md  known_gaps.md  service_manager_setup.md  spec_compliance_critical_review.md  test_coverage_rust_migration_matrix.md  testing_plan_and_report.md
filer/: Cargo.toml  README.md
filer/src/: main.rs
filer/src/app/: mod.rs
filer/src/handlers/: dir.rs  meta.rs  mod.rs  mod.rs.patch  path.rs  range.rs  read.rs  tests.rs  types.rs  write.rs
filer/tests/: http_api.rs  startup_shutdown.rs
mounty/: Cargo.toml  README.md  specs.md
mounty/src/: main.rs
mounty/src/fs/: config.rs  mod.rs
mounty/src/fs/fuse/: mod.rs
mounty/src/fs/http/: client.rs  mod.rs  types.rs
mounty/src/fs/remote_fs/: dir_ops.rs  file_ops.rs  mod.rs  tests.rs
mounty/src/fs/utils/: file_handle.rs  inode_map.rs  test_utils.rs
mounty/tests/: e2e_mount_test.rs  fuse_shutdown.rs  startup.rs
mounty/tests/common/: mod.rs
src/: main.rs
src/app/: mod.rs
src/fs/: config.rs  http_client.rs  inode_map.rs  mod.rs  path_utils.rs  remote_fs.rs  remote_fs_fuse.rs  test_utils.rs  types.rs
src/fs/fuse/: mod.rs
src/fs/http/: client.rs  mod.rs  types.rs
src/fs/remote_fs/: dir_ops.rs  file_ops.rs  mod.rs  tests.rs
src/fs/utils/: file_handle.rs  inode_map.rs  mod.rs  runtime.rs  test_utils.rs
src/handlers/: mod.rs  tests.rs
test/: Dockerfile.perf  README.md  run_chunk_experiment.sh  run_latency_smoke.sh  run_perf_tests.sh  specs.md  test_chaos.py
