[package]
name = "remote-fs-client"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.14"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
url = "2.5.4"
percent-encoding = "2.3.2"
async-trait = "0.1.89"
thiserror = "2.0.17"
httpmock = "0.8.1"
