[package]
name = "mounty"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A FUSE-based remote filesystem client that mounts a remote directory over HTTP as a local filesystem"
license = "Apache-2.0"
repository = "https://github.com/user/mounty"
keywords = ["fuse", "filesystem", "http", "remote"]
categories = ["filesystem", "os"]

[dependencies]
fuser = "0.14"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"
url = "2.5.4"
percent-encoding = "2.3.2"
async-trait = "0.1.89"
thiserror = "2.0.17"
futures = "0.3"
tokio-stream = "0.1.18"
bytes = "1.11.1"
indexmap = "1.9"


[dev-dependencies]
httpmock = "0.8.1"
