[package]
name = "remote-fs-server"
version = "0.1.0"
edition = "2024"
# axum = "0.8.4"   # remove this stray key from [package]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version= "0.7", features=["io"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1.0.142"
tower-http = { version="0.6.6", features = ["trace", "limit"] }
futures = "0.3.32"
filetime = "0.2.29"

[dev-dependencies]
proptest = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.10.1"
nix = { version = "0.29", features = ["signal"] }
